Set uniform line-heights for correct alignment

--- a/app/assets/stylesheets/content/_form_error_messages.sass
+++ b/app/assets/stylesheets/content/_form_error_messages.sass
@@ -30,6 +30,7 @@
 
 span.errorSpan
   font-weight: bold
+  width: 100%
 
   textarea, select, input
     &, &:hover, &:focus
