--- a/app/assets/stylesheets/content/_select2.scss
+++ b/app/assets/stylesheets/content/_select2.scss
@@ -122,9 +122,10 @@ $se2-theme-selectable-font-color-highlighted: $drop-down-selected-font-color;
 
 $se2-element-height: 33px;
 $se2-input-height: rem-calc(34px);
-$se2-line-height: 30px;
+$se2-line-height: $se2-element-height;
 $se2-button-width: 28px;
-$se2-arrow-button-width: 18px;
+$se2-arrow-button-height: 20px;
+$se2-arrow-button-width: 17px;
 $se2-results-max-height: 200px;
 
 $se-multiple-input-line-height: 19px;
@@ -141,7 +142,7 @@ $se2-width: 100%;
     box-shadow: none;
     background: none;
     height: $se2-element-height;
-    line-height: $se2-element-height;
+    line-height: $se2-line-height;
 
     .select2-chosen {
       line-height: $se2-line-height;
@@ -156,7 +157,7 @@ $se2-width: 100%;
 
       > b {
         display: inline-block;
-        height: $se2-arrow-button-width;
+        height: $se2-arrow-button-height;
         width: $se2-arrow-button-width;
       }
     }
